--- a/cw_styles.css
+++ b/cw_styles.css
@@ -27,6 +27,9 @@ body{
    background-color: rgb(180, 180, 223);
    font-family: Verdana, Geneva, sans-serif;
 }
+section{
+   color:white;
+}
 h1, h2{
    font-weight: normal;
 }
@@ -46,22 +49,55 @@ footer{
 body > header{
    background-color: rgb(97, 97, 211);
 }
-body > h1{
+body > header > h1{
    font-size: 4vw;
    color: rgba(225, 225, 225, 0.8);
+   font-family: Limelight, cursive;
+   margin: 0px;
 }
-h1 > span{
-   
+body > header > h1 > span{
+   color: rgba(225, 225, 225, 0.4);
 }
-
-
 
 /* Navigation Styles */
-
-
-
+nav#mainLinks{
+   padding-top: 5px;
+   padding-bottom: 5px;
+}
+#mainLinks a:visited{
+   color:white;
+}
+#mainLinks a:link{
+   color:white;
+}
+#mainLinks a:hover{
+   color: rgba(255, 255, 255, 0.8);
+   background-color: rgba(51, 51, 51, 0.5);
+}
+#mainLinks a:active{
+   color: rgba(255, 255, 255, 0.8);
+   background-color: rgba(51, 51, 51, 0.5);
+}
 
 /* Outline Styles */
+nav#outline{
+   color: rgb(51, 51, 51);
+   font-size: 0.8em;
+}
+h1#outline{
+   text-align: center;
+}
+nav#outline > ol{
+   line-height: 2em;
+   margin-top: 0px;
+   margin-bottom: 0px;
+   margin-left: 5px;
+   margin-right: 5px;
+   list-style-type: upper-roman;
+}
+nav#outline > ol{
+   
+}
 
 
 
